--- a/index.html
+++ b/index.html
@@ -2,36 +2,73 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>angular101</title>
+  <title>Music</title>
   <link rel="stylesheet" href="/lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body ng-app="SongApp">
-  <section ng-controller="SongCtrl">
-    <h1>{{title}}</h1>
-    <div>
-      <input type="text" ng-model="searchText" />
-    </div>
-    <select ng-model="songs.repeatSelect">
-      <option ng-repeat="song in songs">{{song.artist}}</option>
-    </select>
-    <select ng-model="songs.repeatSelect">
-      <option ng-repeat="song in songs">{{song.album}}</option>
-    </select>
-    <div class="song-list" ng-repeat="song in songs | filter:searchText">
-      <h2>{{song.name}}</h2> 
-      Performed by <b>{{song.artist}}</b>
-      on the album <b>{{song.album}}</b>.<button ng-click="killSong(song)">Remove</button>
-    </div>
-    <div>
-      <input type="text" placeholder="Song" ng-model="newSongName">
-      <input type="text" placeholder="Artist" ng-model="newSongArtist">
-      <input type="text" placeholder="Album" ng-model="newSongAlbum">
-      <button ng-click="addSong()">Create</button>
-    </div>
-  </section>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Link</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+  
+  <div ng-view></div>
+
   <script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="lib/bower_components/angular/angular.min.js"></script>
+  <script src="lib/bower_components/angular-route/angular-route.min.js"></script>
+  <script src="lib/bower_components/angular-filter/dist/angular-filter.min.js"></script>
   <script src="app/app.js"></script>
+  <script src="app/factories/get-songs.js"></script>
   <script src="app/controllers/Song.js"></script>
+  <script src="app/controllers/SongDetailCtrl.js"></script>
 </body>
 </html>
